<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_drop_down_indicator"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_menu_schedule"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_results"
        android:icon="@drawable/ic_menu_results"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_standings"
        android:icon="@drawable/ic_menu_standings"
        android:title="@string/title_standings" />

    <item
        android:id="@+id/navigation_drivers"
        android:icon="@drawable/ic_menu_drivers"
        android:title="@string/title_drivers" />
</menu>